# hydrogen-pfhx

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
src/configs/: alternate_configuration.yaml
src/hydrogen_pfhx/: __init__.py  bvp_model.py  catalysts.py  fluids.py  heat_transfer_models.py  helium_neon.py  hexs.py  hydrogen_thermodynamics.py  model.py  ortho_para_dynamics.py  outputs.py  pressure_models.py  run_model.py  utils.py
src/hydrogen_pfhx/configs/: default_configuration.yaml
tests/: default_configuration.yaml  test_model.ipynb  test_model.py  test_spyder.py
