[project]
name = "hydrogen_pfhx"
version = "0.0.10"
description = "Chemical engineering model of hydrogen plate-fin heat exchanger"
readme = "README.md"
keywords = ['hydrogen','pfhx','heat exchanger','ortho','para','engineering']
authors = [
    { name = "Keelan O'Neill", email = "keelan.oneill@uwa.edu.au" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
dependencies = [
    "CoolProp >=6.4.1",
    "matplotlib >=3.5.2",
    "numpy >=1.21.6",
    "pandas >=1.3.5",
    "pyyaml >=6.0",
    "scipy >=1.7.3",
]
requires-python = ">=3.7"

[build]
include = ["configs/*", "tests/*"]

[project.urls]
url = "https://github.com/fsr-uwa/hydrogen-pfhx"
