[metadata]
name = hydrogen_pfhx
version = 0.1.2
url = https://github.com/fsr-uwa/hydrogen-pfhx
description = "Chemical engineering model of hydrogen plate-fin heat exchanger."
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 'hydrogen','pfhx','heat exchanger','ortho','para','engineering'
author = "Keelan O'Neill"
author_email = "keelan.oneill@uwa.edu.au"
license =  "BSD 3-Clause License"
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
include_package_data=True
python_requires = >=3.7

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    CoolProp >=6.4.1
    matplotlib >=3.5.2
    numpy >=1.21.6
    pandas >=1.3.5
    pyyaml >=6.0
    scipy >=1.7.3

